--- a/Views/Chat.cshtml
+++ b/Views/Chat.cshtml
@@ -1,52 +1,33 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>pChat &mdash; Private Chatroom</title>
-  <link rel="stylesheet" href="@Url.Content("~/wwwroot/css/site.css")">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-</head>
-<body>
 
-    <!-- Navigation Bar -->
-    <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#" id="userField">@ViewBag.currentUserName </a>
-        </div>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Log Out</a></li>
-        </ul>
-      </div>
-    </nav>
-    <!-- / Navigation Bar -->
-    <div class="container">
-        <div class="col-xs-12 col-md-9 chat__body">
-          <div class="row">
-            <div class="col-xs-12">
-              <ul class="list-group chat__main">
-                <table style="width:100%" id="chatTable">
-                    <tr>
-                        <th>Name</th>
-                        <th>Massage</th> 
-                    </tr>
-                </table>
-              </ul>
-            </div>
-            <div class="chat__type__body">
-              <div class="chat__type">
-                <textarea id="msg_box" placeholder="Type your message"></textarea>
-                <button class="btn btn-primary" id="sendMessage">Send</button>
-              </div>
-            </div>
-            <div class="chat__typing">
-              <span id="typerDisplay"></span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+<h2> Hi, @ViewBag.CurrentUserName</h2>       
+       
+ <div class="col-xs-12 col-md-9 chat__body">
+   <div class="row">
+     <div class="col-xs-12">
+       <ul class="list-group chat__main">
+         <table style="width:100%" id="chatTable">
+             <tr>
+                 <th>Name</th>
+                 <th>Message</th> 
+             </tr>
+         </table>
+       </ul>
+     </div>
+     <div class="chat__type__body">
+       <div class="chat__type">
+         <textarea id="msg_box" placeholder="Type your message" style="min-width: 200px;"></textarea>
+         <button class="btn btn-primary" id="sendMessage">Send</button>
+       </div>
+     </div>
+     <div class="chat__typing">
+       <span id="typerDisplay"></span>
+     </div>
+   </div>
+ </div>
+</div>
+    
+    
     <script src="@Url.Content("~/Content/app.js")"></script>
-</body>
-</html>
+  <!-- </body>
+  </html> -->
 
