--- a/Views/Login.cshtml
+++ b/Views/Login.cshtml
@@ -1,21 +1,11 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
   <title>pChat &mdash; Private Chatroom</title>
   <link rel="stylesheet" href="@Url.Content("~/wwwroot/css/site.css")">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
-<body>
-
-    <!-- Navigation Bar -->
-    <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">pChat</a>
-        </div>
-      </div>
-    </nav>
-    <!-- / Navigation Bar -->
+<body> -->
 
     <div class="container">
       <div class="row">
@@ -35,5 +25,5 @@
     </div>
 
     <script src="@Url.Content("~/wwwroot/js/site.js")"></script>
-</body>
-</html>
+<!-- </body>
+</html> -->
