--- a/Views/Login.cshtml
+++ b/Views/Login.cshtml
@@ -12,12 +12,14 @@
         <div class="col-md-5 col-md-offset-4">
           <div class="panel panel-default">
             <div class="panel-body">
-                <form action="/Home/Login" method="post" style="margin:0" autocomplete="off">
+                <form method="post" style="margin:0" autocomplete="off">
                     <div class="form-group">
                         <input type="text" name="username" id="username" placeholder="Enter Username" class="form-control" required minlength="3" maxlength="15" />
+
+                        <input type="password" name="password" id="password" placeholder="Enter Username" class="form-control" required minlength="3" maxlength="15" />
                     </div>
-                    <button type="submit" class="btn btn-primary btn-block">Enter Chat</button>
-                    <button type="submit" class="btn btn-primary btn-block">Enter Chat</button>
+                    <button type="submit" asp-controller = "Home" asp-action = "Login">Login</button> 
+                    <button type="submit" asp-controller = "Home" asp-action = "Register">Register</button>
                 </form>
             </div>
           </div>
