--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,16 +17,14 @@
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top" style="margin-bottom: -40px;">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
                 <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Dialogue</a>
+            </div>
+            <div>
+                 <a asp-area="" asp-controller="Home" asp-action="Login" class="navbar-brand navbar-right">Login</a>
+                <a asp-area="" asp-controller="Home" asp-action="Register" class="navbar-brand navbar-right">Register</a>
             </div>
         </div>
     </nav>
