--- a/Views/Home/Register.cshtml
+++ b/Views/Home/Register.cshtml
@@ -1,3 +1,4 @@
+@model UserRegisterViewModel
 
     <div class="container">
       <div class="row">
@@ -5,25 +6,30 @@
         <div class="col-md-5 col-md-offset-4">
           <div class="panel panel-default">
             <div class="panel-body">
-                <form asp-controller="Home" method="post">
-                    <div class="form-group">
-                        Username:
-                        <input type="Username" data-val="true"
-                                data-val-email="The Username field is not a valid email address."
-                                data-val-required="The Username field is required."
-                                id="username" name="username" value="" /> <br>
-                         <br/>
-                        Password:
-                        <input type="password" data-val="true"
-                        data-val-required="The Password field is required."
-                        id="password" name="password" /><br>
-                    </div>
-                    <button type="submit" class="btn btn-default" formaction="/Home/Register">Register</button>
+                <form asp-controller="Home" asp-action="Register" method="post">
+                  @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+
+                    Username:  <input asp-for="UserName" /> <br />
+                    <span asp-validation-for="UserName" class="text-danger"></span><br/>
+
+                    Password: <input asp-for="PasswordString" /><br />
+                    <span asp-validation-for="PasswordString" class="text-danger"></span><br/>
+
+                    First Name: <input asp-for="FirstName" /><br />
+                    <span asp-validation-for="FirstName" class="text-danger"></span><br/>
+
+                    Last Name: <input asp-for="LastName" /><br />
+                    <span asp-validation-for="LastName" class="text-danger"></span><br/>
+
+                    <button type="submit" class="btn btn-default">Register</button>
                 </form>
+
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <script src="@Url.Content("~/wwwroot/js/site.js")"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.2.0.min.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.16.0/jquery.validate.min.js"></script>
+<script src="https://ajax.aspnetcdn.com/ajax/jquery.validation.unobtrusive/3.2.6/jquery.validate.unobtrusive.min.js"></script>
