Added Email to User, Refactored code

--- a/Views/Home/Register.cshtml
+++ b/Views/Home/Register.cshtml
@@ -15,6 +15,9 @@
                     Password: <input asp-for="PasswordString" /><br />
                     <span asp-validation-for="PasswordString" class="text-danger"></span><br/>
 
+                    Email:  <input asp-for="Email" /> <br />
+                    <span asp-validation-for="Email" class="text-danger"></span><br/>
+
                     First Name: <input asp-for="FirstName" /><br />
                     <span asp-validation-for="FirstName" class="text-danger"></span><br/>
 
