--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -33,6 +33,89 @@ body {
     background-color: #22c757;
 }
 
+ul.ChatLog {
+    list-style: none;
+  }
+  
+  .ChatLog {
+    max-width: 30em;
+    margin: 0 auto;
+    width: 400px; height: 200px; overflow: auto; margin-bottom: 2em;
+  }
+  .ChatLog .ChatLog__entry {
+    margin: .5em;
+  }
+  
+  .ChatLog__entry {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    max-width: 100%;
+  }
+  
+  .ChatLog__entry.ChatLog__entry_mine {
+    flex-direction: row-reverse;  
+  }
+  
+  .ChatLog__avatar {
+    flex-shrink: 0;
+    flex-grow: 0;
+    z-index: 1;
+    height: 50px;
+    width: 50px;
+    border-radius: 25px;
+    
+  }
+  
+  .ChatLog__entry.ChatLog__entry_mine 
+  .ChatLog__avatar {
+    display: none;
+  }
+  
+  .ChatLog__entry .ChatLog__message {
+    position: relative;
+    margin: 0 12px;
+  }
+  
+  .ChatLog__entry .ChatLog__message::before {
+    position: absolute;
+    right: auto;
+    bottom: .6em;
+    left: -12px;
+    height: 0;
+    content: '';
+    border: 6px solid transparent;
+    border-right-color: #ddd;
+    z-index: 2;
+  }
+  
+  .ChatLog__entry.ChatLog__entry_mine .ChatLog__message::before {
+    right: -12px;
+    bottom: .6em;
+    left: auto;
+    border: 6px solid transparent;
+    border-left-color: #08f;
+  }
+  
+  .ChatLog__message {
+    background-color: #ddd;
+    padding: .5em;
+    border-radius: 4px;
+    font-weight: lighter;
+    max-width: 100%;
+  }
+  
+  .ChatLog__entry.ChatLog__entry_mine .ChatLog__message {
+    border-top: 1px solid #07f;
+    border-bottom: 1px solid #07f;
+    background-color: #08f;
+    color: #fff;
+  }
+  
+  .ChatLog__message .ChatLog__timestamp {
+    display: none;
+  }
+
 
 
 .loader {
